--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ footer {
 	word-wrap: break-word;
 }
 .universal-div img {
-    max-width: 100%;
+    max-width: 100% !important;
 }
 
 .wp-caption-text {
