--- a/style.css
+++ b/style.css
@@ -244,7 +244,15 @@ a {
 	margin-left: -50px;
 }
 
-.all-list, .all-list a {
+.all-list li {
+    width: 100px;
+    padding: 0;
+    position: relative;
+    left: 50%;
+    margin-left: -50px;
+}
+
+.all-list, .all-list li, .all-list a {
 	color: white;
 	list-style: none;
 }
