--- a/new-style.css
+++ b/new-style.css
@@ -270,6 +270,37 @@ a {
 	visibility: hidden;
 }
 
+
+
+/*******************
+WordPress alignment classes
+*******************/
+
+.alignnone, .alignleft {
+    text-align: left;
+}
+.alignright {
+    text-align: right;
+}
+.aligncenter {
+    text-align: center;
+}
+
+img.alignnone, img.alignleft {
+    margin-left: 50%;
+    transform: translateX(-100%);
+}
+img.alignright {
+    margin-right: 50%;
+    transform: translateX(100%);
+}
+img.aligncenter {
+    margin-left: 50%;
+    transform: translateX(-50);
+}
+
+/* selection color */
+
 ::selection {
 	background-color: black;
 	color: white;
