--- a/new-style.css
+++ b/new-style.css
@@ -3,57 +3,62 @@ Theme Name: LnxReviews
 Author: Zeke Y
 Version: 1.0
 */
+
 @import url(http://openfontlibrary.org/face/crusoe-text);
 
 body {
 	background-color: rgb(136, 136, 136);
     text-align: center;
 	color: white;
-	font-family: Crusoe Text, sans-serif;
+	font-family: 'Crusoe Text', sans-serif;
 }
 
-#logo {
+
+
+/*******************
+Header
+*******************/
+
+.logo {
 	width: 100px;
 	margin-bottom: -50px;
 }
 
-#home_link {
+.home-link {
 	text-decoration: none;
 }
 
-#sitetitle {
+.site-title {
 	color: white;
 	font-size: 70px;
-	font-family: Crusoe Text, sans-serif;
+	font-family: 'Crusoe Text', sans-serif;
 }
 
-#header_small {
+.header-small {
 	font-family: sans-serif;
     font-size: 28px;
 }
 
-small, .wp-caption-text {
+small, .wp-caption-text, .small-review {
     text-rendering: optimizeLegibility;
+    font-size: 10px;
+    font-style: italic;
 }
+
+
+
+/*******************
+Navigation
+*******************/
 
 .navbar, footer {
 	background-color: rgb(17, 17, 17);
 	width: 100%;
 	height: 75px;
 	opacity: 0.9;
-}
-
-.img {
-    position: relative;
-}
-
-.os_review_links {
-	height: 75px;
-    width: 100%;
-    text-align: center;
-	-moz-user-select: none;
-	-webkit-user-select: none;
-	user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
 }
 
 .os-link {
@@ -66,40 +71,14 @@ small, .wp-caption-text {
     display: inline;
 }
 
+
+
+/*******************
+The reviews on the home page
+*******************/
+
 .reviewheaderlink {
 	text-decoration: none;
-}
-			
-footer {
-	font-size: 17px;
-	line-height: 75px;
-	margin-top: 25px;
-}
-
-#donate {
-	float: left;
-	margin-left: 25px;
-	font-weight: 300;
-}
-
-#admin {
-	position: relative;
-}
-
-#contact {
-	float: right;
-	margin-right: 25px;
-}
-
-.footer-link {
-	color: white;
-	text-decoration: none;
-	font-family: serif;
-	font-weight: 300;
-}
-
-.footer-link:hover {
-	text-decoration: underline;
 }
 			
 .up {
@@ -129,19 +108,14 @@ footer {
     max-width: 100% !important;
 }
 
-alignleft {
+/*.alignleft {
     text-align: left;
 }
 
 img.aligncenter {
     margin-left: 50%;
     transform: translateX(-50%);
-}
-
-.wp-caption-text, .small-review {
-    font-size: 10px;
-    font-style: italic;
-}
+}*/
 
 ol, ul {
     list-style: none;
@@ -164,14 +138,14 @@ ol, ul {
 }
 
 .form-text {
-	font-family: Crusoe Text, sans-serif;
+	font-family: 'Crusoe Text', sans-serif;
 	font-size: 20px;
 	padding: 5px;
 	width: 280px;
 }
 
 .textarea-form {
-    font-family: Crusoe Text, sans-serif;
+    font-family: 'Crusoe Text', sans-serif;
 	font-size: 20px;
 	padding: 5px;
 	height: 150px;
@@ -182,7 +156,7 @@ ol, ul {
 }
 
 .submit-form {
-    font-family: Crusoe Text, sans-serif;
+    font-family: 'Crusoe Text', sans-serif;
 	font-size: 20px;
 	padding: 5px 7px 5px 7px;
 	width: 100px;
@@ -226,12 +200,6 @@ a {
 	text-decoration: none;
 }
 
-.copyright-notice {
-	color: black;
-	font-family: serif;
-	font-size: 12px;
-}
-
 .resources {
 	font-size: 13px;
 }
@@ -244,6 +212,15 @@ a {
 	font-size: 45px;
 	margin-top: 75px;
 }
+
+#result {
+	visibility: hidden;
+}
+
+
+/*******************
+List of all reviews
+*******************/
 
 .all-list {
 	width: 300px;
@@ -259,15 +236,11 @@ a {
     position: relative;
     left: 50%;
     margin-left: -150px;
+    list-style: none;
 }
 
-.all-list, .all-list li, .all-list a {
+.all-list li a {
 	color: white;
-	list-style: none;
-}
-
-#result {
-	visibility: hidden;
 }
 
 
@@ -286,10 +259,55 @@ WordPress alignment classes
 }
 .aligncenter {
     margin-left: 50%;
-    transform: translateX(-50);
+    transform: translateX(-50%);
 }
 
-/* selection color */
+
+
+/*******************
+Footer
+*******************/
+
+footer {
+	font-size: 17px;
+	line-height: 75px;
+	margin-top: 25px;
+}
+
+.about {
+	float: left;
+	margin-left: 25px;
+	font-weight: 300;
+}
+.admin {
+	position: relative;
+}
+.contact {
+	float: right;
+	margin-right: 25px;
+}
+
+.footer-link {
+	color: white;
+	text-decoration: none;
+	font-family: serif;
+	font-weight: 300;
+}
+.footer-link:hover {
+	text-decoration: underline;
+}
+
+.copyright {
+	color: black;
+	font-family: serif;
+	font-size: 12px;
+}
+
+
+
+/*******************
+Selection color
+*******************/
 
 ::selection {
 	background-color: black;
