--- a/new-style.css
+++ b/new-style.css
@@ -6,11 +6,47 @@ Version: 1.0
 
 @import url(http://openfontlibrary.org/face/crusoe-text);
 
+
+
+/*******************
+General
+*******************/
+
 body {
 	background-color: rgb(136, 136, 136);
     text-align: center;
 	color: white;
 	font-family: 'Crusoe Text', sans-serif;
+}
+
+a {
+	color: black;
+	font-weight: bold;
+	text-decoration: none;
+}
+
+
+
+/*******************
+The container for content
+*******************/
+
+.universal-div {
+	width: 500px;
+	background-color: white;
+	color: black;
+	position: relative;
+	left: 50%;
+	margin-left: -250px;
+	border-radius: 7px;
+	font-size: 110%;
+	padding: 7px;
+	line-height: 25px;
+	word-wrap: break-word;
+    overflow: hidden;
+}
+.universal-div img {
+    max-width: 100% !important;
 }
 
 
@@ -90,32 +126,10 @@ The reviews on the home page
 	text-align: center;
 }
 
-.universal-div {
-	width: 500px;
-	background-color: white;
-	color: black;
-	position: relative;
-	left: 50%;
-	margin-left: -250px;
-	border-radius: 7px;
-	font-size: 110%;
-	padding: 7px;
-	line-height: 25px;
-	word-wrap: break-word;
-    overflow: hidden;
-}
-.universal-div img {
-    max-width: 100% !important;
-}
 
-/*.alignleft {
-    text-align: left;
-}
-
-img.aligncenter {
-    margin-left: 50%;
-    transform: translateX(-50%);
-}*/
+/*******************
+Reviews
+*******************/
 
 ol, ul {
     list-style: none;
@@ -136,6 +150,12 @@ ol, ul {
 .logged-in-as {
     display: none;
 }
+
+
+
+/*******************
+Forms
+*******************/
 
 .form-text {
 	font-family: 'Crusoe Text', sans-serif;
@@ -163,41 +183,38 @@ ol, ul {
 	cursor: pointer;
 }
 
+
+
+/*******************
+Headers
+*******************/
+
 .big_header {
 	font-size: 56px;
 	margin-top: 100px;
 }
-
 .page-header {
 	font-size: 45px;
 	margin-top: 100px;
 }
-
-.recent-post-title {
-    color: white;
-    font-size: 32px;
-    margin-top: 100px;
-}
-
 .small-header {
 	margin-top: 50px;
 	font-size: 32px;
 }
-
 .tiny_header {
 	margin-top: 100px;
 	font-size: 24px;
 }
 
+.post-title {
+    color: white;
+    font-size: 32px;
+    margin-top: 100px;
+}
+
 #first_help {
 	margin-top: 0px;
 	margin-bottom: -5px;
-}
-
-a {
-	color: black;
-	font-weight: bold;
-	text-decoration: none;
 }
 
 .resources {
