--- a/style.css
+++ b/style.css
@@ -3,113 +3,37 @@ Theme Name: LnxReviews
 Author: Zeke Y
 Version: 1.0
 */
+
 @import url(http://openfontlibrary.org/face/crusoe-text);
+
+
+
+/*******************
+General
+*******************/
 
 body {
 	background-color: rgb(136, 136, 136);
     text-align: center;
 	color: white;
-	font-family: Crusoe Text, sans-serif;
+	font-family: 'Crusoe Text', sans-serif;
 }
 
-#logo {
-	width: 100px;
-	margin-bottom: -50px;
-}
-
-#home_link {
+a {
+	color: black;
+	font-weight: bold;
 	text-decoration: none;
 }
 
-#sitetitle {
-	color: white;
-	font-size: 70px;
-	font-family: Crusoe Text, sans-serif;
-}
-
-#header_small {
-	font-family: sans-serif;
-    font-size: 28px;
-}
-
-small, .wp-caption-text {
-    text-rendering: optimizeLegibility;
-}
-
-.navbar, footer {
-	background-color: rgb(17, 17, 17);
-	width: 100%;
-	height: 75px;
-	opacity: 0.9;
-}
-
-.img {
-    position: relative;
-}
-
-.os_review_links {
-	height: 75px;
-    width: 100%;
-    text-align: center;
-	-moz-user-select: none;
-	-webkit-user-select: none;
-	user-select: none;
-}
-
-.os-link {
+.white {
     color: white;
-    line-height: 75px;
-    margin: 0 20px;
 }
 
-.os-link-div {
-    display: inline;
-}
 
-.reviewheaderlink {
-	text-decoration: none;
-}
-			
-footer {
-	font-size: 17px;
-	line-height: 75px;
-	margin-top: 25px;
-}
 
-#donate {
-	float: left;
-	margin-left: 25px;
-	font-weight: 300;
-}
-
-#admin {
-	position: relative;
-}
-
-#contact {
-	float: right;
-	margin-right: 25px;
-}
-
-.footer-link {
-	color: white;
-	text-decoration: none;
-	font-family: serif;
-	font-weight: 300;
-}
-
-.footer-link:hover {
-	text-decoration: underline;
-}
-			
-.up {
-	text-decoration: none;
-	color: white;
-	font-weight: 700;
-	font-size: 100%;
-	width: 100%;
-	text-align: center;
-}
+/*******************
+The container for content
+*******************/
 
 .universal-div {
 	width: 500px;
@@ -129,22 +53,82 @@ footer {
     max-width: 100% !important;
 }
 
-alignleft {
-    text-align: left;
+
+
+/*******************
+Header
+*******************/
+
+.logo {
+	width: 100px;
+	margin-bottom: -50px;
 }
 
-img.aligncenter {
-    margin-left: 50%;
-    transform: translateX(-50%);
+.home-link {
+	text-decoration: none;
 }
 
-.wp-caption-text, .small-review {
+.site-title {
+	color: white;
+	font-size: 70px;
+	font-family: 'Crusoe Text', sans-serif;
+}
+
+.header-small {
+	font-family: sans-serif;
+    font-size: 28px;
+}
+
+small, .wp-caption-text, .small-review {
+    text-rendering: optimizeLegibility;
     font-size: 10px;
     font-style: italic;
 }
 
-ol, ul {
-    list-style: none;
+
+
+/*******************
+Navigation
+*******************/
+
+.navbar, footer {
+	background-color: rgb(17, 17, 17);
+	width: 100%;
+	height: 75px;
+	opacity: 0.9;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
+}
+
+.os-link {
+    color: white;
+    line-height: 75px;
+    margin: 0 20px;
+    display: inline;
+}
+
+/*.os-link-div {
+    display: inline;
+}*/
+
+
+
+/*******************
+Reviews
+*******************/
+
+.reviewheaderlink {
+	text-decoration: none;
+}
+			
+.up {
+	text-decoration: none;
+	color: white;
+	font-weight: 700;
+	font-size: 100%;
+	width: 100%;
+	text-align: center;
 }
 
 .version {
@@ -154,24 +138,21 @@ ol, ul {
 	left: 47px;
 }
 
-.comment-reply-title {
-    font-size: 32px;
-	margin-top: 100px;
-}
 
-.logged-in-as {
-    display: none;
-}
+
+/*******************
+Forms
+*******************/
 
 .form-text {
-	font-family: Crusoe Text, sans-serif;
+	font-family: 'Crusoe Text', sans-serif;
 	font-size: 20px;
 	padding: 5px;
 	width: 280px;
 }
 
 .textarea-form {
-    font-family: Crusoe Text, sans-serif;
+    font-family: 'Crusoe Text', sans-serif;
 	font-size: 20px;
 	padding: 5px;
 	height: 150px;
@@ -182,67 +163,51 @@ ol, ul {
 }
 
 .submit-form {
-    font-family: Crusoe Text, sans-serif;
+    font-family: 'Crusoe Text', sans-serif;
 	font-size: 20px;
 	padding: 5px 7px 5px 7px;
 	width: 100px;
 	cursor: pointer;
 }
 
-.big_header {
+
+
+/*******************
+Headers
+*******************/
+
+.big-header {
 	font-size: 56px;
 	margin-top: 100px;
 }
-
 .page-header {
 	font-size: 45px;
 	margin-top: 100px;
 }
-
-.recent-post-title {
-    color: white;
-    font-size: 32px;
-    margin-top: 100px;
-}
-
 .small-header {
 	margin-top: 50px;
 	font-size: 32px;
 }
-
 .tiny_header {
 	margin-top: 100px;
 	font-size: 24px;
 }
 
-#first_help {
-	margin-top: 0px;
-	margin-bottom: -5px;
+.post-title {
+    color: white;
+    font-size: 32px;
+    margin-top: 100px;
 }
 
-a {
-	color: black;
-	font-weight: bold;
-	text-decoration: none;
-}
 
-.copyright-notice {
-	color: black;
-	font-family: serif;
-	font-size: 12px;
-}
 
-.resources {
-	font-size: 13px;
-}
+/*******************
+Lists
+*******************/
 
-.all-os-section {
-	column-count: 3;
-}
 
-.contact_header {
-	font-size: 45px;
-	margin-top: 75px;
+ol, ul {
+    list-style: none;
 }
 
 .all-list {
@@ -259,16 +224,78 @@ a {
     position: relative;
     left: 50%;
     margin-left: -150px;
+    list-style: none;
 }
 
-.all-list, .all-list li, .all-list a {
+.all-list li a {
 	color: white;
-	list-style: none;
 }
 
-#result {
-	visibility: hidden;
+
+
+/*******************
+Alignment classes
+*******************/
+
+.alignnone, .alignleft {
+    margin-left: 50%;
+    transform: translateX(-100%);
 }
+.alignright {
+    margin-right: 50%;
+    transform: translateX(100%);
+}
+.aligncenter {
+    margin-left: 50%;
+    transform: translateX(-50%);
+}
+
+
+
+/*******************
+Footer
+*******************/
+
+footer {
+	font-size: 17px;
+	line-height: 75px;
+	margin-top: 25px;
+}
+
+.about {
+	float: left;
+	margin-left: 25px;
+	font-weight: 300;
+}
+.admin {
+	position: relative;
+}
+.contact {
+	float: right;
+	margin-right: 25px;
+}
+
+.footer-link {
+	color: white;
+	text-decoration: none;
+	font-family: serif;
+	font-weight: 300;
+}
+.footer-link:hover {
+	text-decoration: underline;
+}
+
+.copyright {
+	color: black;
+	font-family: serif;
+	font-size: 12px;
+}
+
+
+
+/*******************
+Selection color
+*******************/
 
 ::selection {
 	background-color: black;
