Trying to fix WordPress errors

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 Theme Name: LnxReviews
 Author: Zeke Y
 Version: 1.0
+Description: The LnxReviews.com theme. 
 */
 
 @import url(http://openfontlibrary.org/face/crusoe-text);
