--- a/editor-style.css
+++ b/editor-style.css
@@ -1,1 +1,14 @@
-@import url('style.css')
+@import url('http://openfontlibrary.org/face/crusoe-text');
+
+
+
+/*******************
+Body
+*******************/
+
+body {
+	background-color: rgb(136, 136, 136);
+    text-align: center;
+	color: white;
+	font-family: 'Crusoe Text', sans-serif;
+}
