--- a/editor-style.css
+++ b/editor-style.css
@@ -12,3 +12,14 @@ body {
 	color: white;
 	font-family: 'Crusoe Text', sans-serif;
 }
+
+
+
+/*******************
+Selection
+*******************/
+
+::selection, ::-moz-selection {
+	background-color: black;
+	color: white;
+}
