Fixed the selection color

--- a/editor-style.css
+++ b/editor-style.css
@@ -12,3 +12,18 @@ body {
 	color: white;
 	font-family: 'Crusoe Text', sans-serif;
 }
+
+
+
+/*******************
+Selection
+*******************/
+
+::selection {
+	background-color: black;
+	color: white;
+}
+::-moz-selection {
+	background-color: rgba(0, 0, 0, 0.75);
+	color: white;
+}
