Image captions are now black when in the editor

--- a/editor-style.css
+++ b/editor-style.css
@@ -16,6 +16,16 @@ body {
 
 
 /*******************
+Image Captions
+*******************/
+
+.wp-caption-dd {
+    color: black;
+}
+
+
+
+/*******************
 Selection
 *******************/
 
