--- a/editor-style.css
+++ b/editor-style.css
@@ -8,7 +8,7 @@ Body
 
 body {
 	background-color: rgb(136, 136, 136);
-    text-align: center;
+	text-align: center;
 	color: white;
 	font-family: 'Crusoe Text', sans-serif;
 }
@@ -32,6 +32,7 @@ Links
 a, a:link, a:visited {
     color: white;
     font-weight: bold;
+    text-decoration: none;
 }
 
 
