--- a/style.css
+++ b/style.css
@@ -7,7 +7,9 @@ License: MIT
 License URI: http://opensource.org/licenses/MIT
 */
 
-@import url('http://openfontlibrary.org/face/crusoe-text');
+/*@import url('http://openfontlibrary.org/face/crusoe-text');*/
+
+@import url('<?php echo esc_url(get_stylesheet_directory_uri()) ?>/crusoe-text.min.css');
 
 
 
