Changing the CSS

--- a/style.css
+++ b/style.css
@@ -9,8 +9,6 @@ License URI: http://opensource.org/licenses/MIT
 
 /*@import url('http://openfontlibrary.org/face/crusoe-text');*/
 
-
-
 /*******************
 General
 *******************/
@@ -315,9 +313,23 @@ footer {
 Media Queries
 *******************/
 
+@media screen and (min-width: 500px) {
+  @import url('https://raw.githubusercontent.com/KK4OXJ/lnxreviews.com/master/crusoe-text.min.css');
+  
+  body {
+    font-family: 'Crusoe Text';
+  }
+}
+
+@media screen and (max-width: 499px) {
+  body {
+    font-family: sans-serif;
+  }
+}
+
 @media screen and (min-width: 850px) and (max-width: 925px) {
   .os-link {
-  margin: 0 7px;
+    margin: 0 7px;
   }
 }
 
