--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ License URI: http://opensource.org/licenses/MIT
 General
 *******************/
 
+* {
+  transition: all 0.5s;
+}
+
 body {
   background-color: rgb(136, 136, 136);
   text-align: center;
