--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /*
 Theme Name: LnxReviews
 Author: Zeke Y
+Author URI: https://kk4oxj.github.io
 Version: 1.0
 Description: The LnxReviews.com theme.
 License: MIT
@@ -12,10 +13,6 @@ License URI: http://opensource.org/licenses/MIT
 /*******************
 General
 *******************/
-
-* {
-  transition: all 0.5s;
-}
 
 body {
   background-color: rgb(136, 136, 136);
@@ -313,6 +310,7 @@ footer {
   line-height: 24px;
   -webkit-user-select: text;
   -moz-user-select: text;
+  -ms-user-select: text;
   user-select: text;
 }
 
@@ -359,10 +357,6 @@ Media Queries
   .universal-div {
     width: 75%;
     margin-left: -36%;
-  }
-  .universal-div img:after {
-    display: none;
-    content: "View image";
   }
 }
 
@@ -444,10 +438,10 @@ Media Queries
   *****/
   
   .footer-link {
-    font-size: 0.75em;
+    font-size: 0.9em;
   }
   .copyright {
-    font-size: 0.5em;
+    font-size: 0.9em;
   }
 }
 
@@ -461,6 +455,7 @@ Selection
   background-color: black;
   color: white;
 }
+
 ::-moz-selection {
   background-color: rgba(0, 0, 0, 0.75);
   color: white;
